<resources>
    <string name="app_name">QuickInspect</string>
    <string name="registration_title">Registration</string>
    <string name="registration_name">Name</string>
    <string name="registration_lastname">Lastname</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_username">Username</string>
    <string name="registration_password">Password</string>
    <string name="registration_register">Register</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_rememberMe">Remember me</string>
    <string name="login_forgotPassword">Forgot password</string>
    <string name="home">Home</string>
    <string name="all_tasks">Unassigned tasks</string>
    <string name="tasks_in_process">Tasks in process</string>
    <string name="finished_tasks">Finished tasks</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="report">Report</string>
    <string name="report_finish">Finish</string>
    <string name="report_new_item">New Item</string>
    <string name="report_items">Report items:</string>
    <string name="create_report">Create report</string>
    <string name="item_new"> New item</string>
    <string name="item_fault_name">Name:</string>
    <string name="item_description"> Description:</string>
    <string name="item_picture"> Picture:</string>
    <string name="settings">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_language">Language</string>
    <string name="settings_media_storage">Media and storage</string>
    <string name="assign_me">Assign me</string>
    <string name="apartment_title">Apartment nbr.</string>
    <string name="btn_assign">Assign</string>
    <string name="apartment_address">Address</string>
    <string name="apartment_date">Date </string>
    <string name="language_serbian">Serbian</string>
    <string name="language_english">English</string>
    <string name="madia_and_storage_description">Click if you want to save pictures in media storage.</string>
    <string name="location_desctiption">Click if you want to turn on your location.</string>
    <string name="language_description">Choose language.</string>
    <string name="location">Location</string>
    <string-array name="languages">
        <item>Serbian</item>
        <item>English</item>
    </string-array>
    <string name="camera_access_allowed">Camera permission granted</string>
    <string name="camera_access_denied">Camera permission denied</string>
    <string name="report_date">Report created: </string>
    <string name="state">State: </string>
    <string name="address">Address: </string>
    <string name="waiting">Requested</string>
    <string name="gallery_access_allowed">Gallery permission granted</string>
    <string name="gallery_access_denied">Gallery permission denied</string>
    <string name="view_report">View report</string>
    <string name="turn_on_location">Please, turn on location on your device!</string>
    <string name="request_new_password">Request new password</string>
    <string name="forgot_pass_notice">Insert your email and new password will be sent to you</string>
    <string name="change_password">Change password</string>
    <string name="insert_password">Insert password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_not_empty">Password can\'t be empty</string>
    <string name="password_not_same">Passwords must be the same</string>
    <string name="password_changed">Password is changed</string>
    <string name="save">Save</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="task_is_already_assigned">Task you have requested has already been assigned</string>
    <string name="email_sent">Email is sent</string>
    <string name="you_are_connected_to_internet">You are connected to internet</string>
    <string name="email_password_incorrect">Email/Password is incorrect</string>
    <string name="user_data_updated">User data is updated</string>
    <string name="apartment_number">Apartment number: </string>
    <string name="theme">Dark theme</string>


</resources>
