<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_all_tasks"
            android:title="@string/all_tasks"
            android:icon="@drawable/ic_tasks" />
        <item
            android:id="@+id/nav_tasks_in_process"
            android:title="@string/tasks_in_process"
            android:icon="@drawable/ic_tasks_in_process" />
        <item
            android:id="@+id/nav_finished_tasks"
            android:title="@string/finished_tasks"
            android:icon="@drawable/ic_finished" />

    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_profile" />
                <item
                    android:id="@+id/nav_log_in"
                    android:title="@string/login_signIn"
                    android:icon="@drawable/ic_log_in"/>
                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/log_out"
                    android:icon="@drawable/ic_log_out" />
            </group>
        </menu>
    </item>


</menu>