<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TestActivity"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="25dp"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_name"
        android:hint="@string/registration_name"
        android:textColorHint="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_lastname"
        android:hint="@string/registration_lastname"
        android:textColorHint="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_email"
        android:hint="@string/registration_email"
        android:textColorHint="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_username"
        android:hint="@string/registration_username"
        android:textColorHint="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_pass"
        android:hint="@string/registration_password"
        android:textColorHint="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/registration_register"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>