<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ForgotPasswordActivity"
    android:background="@color/colorBackground"
    tools:openDrawer="start">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/forgot_pass_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorForeground"
            android:onClick="submit"
            android:text="@string/request_new_password">

        </Button>



        <TextView
            android:id="@+id/forgot_pass_notice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_above="@id/forgot_pass_email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="65dp"
            android:layout_marginBottom="31dp"
            android:textSize="20sp"
            android:fontFamily="@font/cagliostro"
            android:text="@string/forgot_pass_notice"/>

        <EditText
            android:id="@+id/forgot_pass_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="65dp"
            android:background="@color/colorTextField"
            android:ems="10"
            android:hint="@string/registration_email"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>
</RelativeLayout>
