<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReportActivity"
    android:background="@color/colorBackground">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <ImageButton
        android:id="@+id/backButtonReport"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:src="@drawable/backicon"
        android:background="@null"/>

    <Button
        android:id="@+id/finishButtonReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorForeground"
        android:layout_alignParentBottom="true"
        android:text="@string/report_finish"
        android:textColor="@color/colorTextField">
    </Button>

    <Button
        android:id="@+id/newItemButtonReport"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_below="@id/backButtonReport"
        android:layout_marginLeft="300dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorForeground"
        android:text="@string/report_new_item"
        android:onClick="onClickNewItem"
        android:textColor="@color/colorTextField" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/reportItemsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButtonReport"
        android:layout_marginTop="90dp"

        android:text="@string/report_items" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listViewReport"
        android:layout_below="@id/reportItemsTextView"
        android:layout_marginBottom="46dp"
        />

</RelativeLayout>
