<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity"
    android:background="@color/colorBackground"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorForeground"
            android:onClick="login"
            android:text="@string/login_signIn">

        </Button>


        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="65dp"
            android:layout_marginBottom="31dp"
            android:background="@color/colorTextField"
            android:ems="10"
            android:hint="@string/login_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="65dp"
            android:background="@color/colorTextField"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"

            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/login_password"
            android:layout_marginLeft="240dp"
            android:layout_marginBottom="-79dp"
            android:background="@null"
            android:text="@string/login_forgotPassword"
            android:textSize="10dp" />

        </RelativeLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
