<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.NewItemActivity"
    android:background="@color/colorBackground"
    tools:openDrawer="start"
    >

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ImageButton
            android:id="@+id/backButtonItem"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:src="@drawable/backicon"
            android:background="@null"/>


        <Button
            android:id="@+id/finishButtonanewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorForeground"
            android:layout_alignParentBottom="true"
            android:text="@string/report_finish"
            android:textColor="@color/colorTextField">
        </Button>

        <TextView
            android:id="@+id/nameOfFaultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_fault_name"
            android:textSize="15sp"
            android:layout_below="@id/backButtonItem"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="28dp"/>
        <TextView
            android:id="@+id/descriotionOfFaultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:textSize="15sp"
            android:layout_below="@id/nameOfFaultTextView"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="28dp"/>

        <TextView
            android:id="@+id/pictureOfFaultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_picture"
            android:layout_below="@id/descriotionOfFaultTextView"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/nameOfFaultEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorTextField"
            android:inputType="text">

        </EditText>

        <EditText
            android:id="@+id/descriptionOfFaultEditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorTextField"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="150dp"
            android:inputType="textMultiLine"
            android:layout_marginRight="30dp">

        </EditText>

        <ImageButton
            android:id="@+id/cameraButtonItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionOfFaultEditText"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:src="@drawable/camera" />
        <ImageButton
            android:id="@+id/galleryButtonItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionOfFaultEditText"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:src="@drawable/gallery" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
