<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ChangePasswordActivity"
    tools:openDrawer="start"
    android:background="@color/colorBackground">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar" />
        <Button
            android:id="@+id/change_pass_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorForeground"
            android:onClick="changePassword"
            android:text="@string/change_password">

        </Button>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:columnCount="1"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="8"
            >
            <LinearLayout android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_columnWeight="1"
                >

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:paddingEnd="10dp"
                    android:text="@string/insert_password"/>
                <EditText
                    android:id="@+id/change_password_pass"
                        android:layout_width="155sp"
                    android:layout_height="55dp"
                    android:layout_gravity="bottom"
                    android:textSize="22sp"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:paddingEnd="10dp"
                    android:text="@string/repeat_password"/>
                <EditText
                    android:id="@+id/change_password_repeat_pass"
                    android:layout_width="155sp"
                    android:layout_height="55dp"
                    android:textSize="22sp"
                    android:layout_marginBottom="20dp"
                    android:inputType="textPassword"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

        </GridLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>